<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_logging_interface</name>
  <version>2.0.1</version>
  <description>Interface that rcl_logging backends needs to implement.</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>Apache License 2.0</license>
  <author email="clalancette@openrobotics.org">Chris Lalancette</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcutils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
